<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        app:layoutDescription="@xml/activity_main_scene">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coodinatorlayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbarlayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context=".MainActivity"
                tools:showIn="@layout/activity_main">

                <com.udacity.LoadingButton
                    android:id="@+id/custom_button"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_margin="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:textDownload="@string/notification_channel_name"
                    app:textDownloading="@string/button_loading"
                    app:bgColor1="@color/colorPrimary"
                    app:bgColor2="@color/colorPrimaryDark"
                    />

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_marginEnd="64dp"
                    app:layout_constraintBottom_toTopOf="@+id/custom_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/radio_glide"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:text="@string/notification_title" />

                    <RadioButton
                        android:id="@+id/radioLoadApp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/radio2_loadapp_text" />

                    <RadioButton
                        android:id="@+id/radioRetrofit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/radio3_retrofit_text" />

                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>